--- a/template/plots.html
+++ b/template/plots.html
@@ -3,17 +3,11 @@
 {% block body %}
 
 <div class="container">
-    <h1>Visualisasi</h1>
+    <h1>Visualization</h1>
     <div class="row">
       <div class="col-sm">
-        <h3>Distribusi MPG</h3>
+        <h3>Feature Importance</h3>
         <div class="chart mt-1" id="dist-type1">
-
-        </div>
-      </div>
-      <div class="col-sm">
-        <h3>Disribusi Horsepower</h3>
-        <div class="chart mt-1" id="dist-type2">
 
         </div>
       </div>
