--- a/template/navbar.html
+++ b/template/navbar.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Bank Marketing Prediction</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,6 +10,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/data">Data</a> 
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/plots">Plots</a> 
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a> 
