--- a/template/prediction.html
+++ b/template/prediction.html
@@ -7,67 +7,67 @@
     <div class="container pt 5">
         <div class="row justify-content-center">
             <div class="col-md-6 mt-3">
-                <h3> Fill This Form to Predict:</h3>
+                <h3> Fill this form to predict:</h3>
                 <form action="/" method="POST">
                     <!-- Age -->
                     <input type="number" name="age" placeholder="Age" class="form-control form-control-sm mt-2">                    
                     <!-- Job -->
-                    <select class="form-control form-control-sm" name="job" >
+                    <select class="form-control form-control-sm mt-2" name="job" >
                         <option value="" disabled selected>Select Job</option>
                         {% for item in data_job%}
                             <option value="{{item}}"> {{item}}</option>
                         {% endfor %}
                     </select>
                     <!-- Marital -->
-                    <select class="form-control form-control-sm" name="marital" >
+                    <select class="form-control form-control-sm mt-2" name="marital" >
                         <option value="" disabled selected>Select Marital Status</option>
                         {% for item in data_marital%}
                             <option value="{{item}}"> {{item}}</option>
                         {% endfor %}
                     </select>
                     <!-- Educaton -->
-                    <select class="form-control form-control-sm" name="education" >
+                    <select class="form-control form-control-sm mt-2" name="education" >
                         <option value="" disabled selected>Select Education Level</option>
                         {% for item in data_education%}
                             <option value="{{item}}"> {{item}}</option>
                         {% endfor %}
                     </select>
                     <!-- Default -->
-                    <select class="form-control form-control-sm" name="default" >
+                    <select class="form-control form-control-sm mt-2" name="default" >
                         <option value="" disabled selected>Has credit in default?</option>
                         {% for item in data_default%}
                             <option value="{{item}}"> {{item}}</option>
                         {% endfor %}
                     </select>
                     <!-- Housing -->
-                    <select class="form-control form-control-sm" name="housing" >
+                    <select class="form-control form-control-sm mt-2" name="housing" >
                         <option value="" disabled selected>Has housing loan?</option>
                         {% for item in data_default%}
                             <option value="{{item}}"> {{item}}</option>
                         {% endfor %}
                     </select>
                     <!-- Loan -->
-                    <select class="form-control form-control-sm" name="loan" >
+                    <select class="form-control form-control-sm mt-2" name="loan" >
                         <option value="" disabled selected>Has personal loan?</option>
                         {% for item in data_default%}
                             <option value="{{item}}"> {{item}}</option>
                         {% endfor %}
                     </select>
                     <!-- Contact -->
-                    <select class="form-control form-control-sm" name="contact" >
+                    <select class="form-control form-control-sm mt-2" name="contact" >
                         <option value="" disabled selected>Contact Type</option>
                         <option value="cellular">cellular</option>
                         <option value="telephone">telephone</option>
                     </select>
                     <!-- Month -->
-                    <select class="form-control form-control-sm" name="month" >
+                    <select class="form-control form-control-sm mt-2" name="month" >
                         <option value="" disabled selected>Last contact month</option>
                         {% for item in data_month%}
                             <option value="{{item}}"> {{item}}</option>
                         {% endfor %}
                     </select>
                     <!-- Day -->
-                    <select class="form-control form-control-sm" name="day_of_week" >
+                    <select class="form-control form-control-sm mt-2" name="day_of_week" >
                         <option value="" disabled selected>Last contact day of week</option>
                         {% for item in data_day%}
                             <option value="{{item}}"> {{item}}</option>
@@ -80,7 +80,7 @@
                     <!-- Previous -->
                     <input type="number" name="previous" placeholder="Number of contacts performed before campaign" class="form-control form-control-sm mt-2">
                     <!-- Poutcome -->
-                    <select class="form-control form-control-sm" name="poutcome" >
+                    <select class="form-control form-control-sm mt-2" name="poutcome" >
                         <option value="" disabled selected>Previous Outcome</option>
                         <option value="failure">failure</option>
                         <option value="nonexistent">nonexistent</option>
@@ -96,8 +96,12 @@
                     <input type="number" name="euribor3m" placeholder="Euribor 3 month rate" class="form-control form-control-sm mt-2">
                     <!-- Number of Employees -->
                     <input type="number" name="nr.employed" placeholder="Number of Employees" class="form-control form-control-sm mt-2">
-                    <button type="submit" class="btn btn-success mt-4">Predict</button>
+                    <div class="row justify-content-center">
+                       <button type="submit" class="btn btn-primary mt-4">Predict</button> 
+                    </div>
                 </form>
+                <br>
+                <br>
             </div>
         </div>
     </div>
