--- a/template/table_data.html
+++ b/template/table_data.html
@@ -1,25 +1,29 @@
 {% extends 'layout.html'%}
 
 {% block body %}
+<div class="container">
+    <h1>Table Data</h1>
+    <div class='table-responsive'>
+        <table class="table table-bordered table-sm table-striped table-hover table-light">
+            <thead>
+                <tr>
+                    {% for item in data.columns %}
+                    <th>{{item}}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+                {% for index,item in data.iterrows() %}
+                <tr>
+                    {% for col in item %}
+                    <td>{{col}}</td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-<h1>Table Data</h1>
-<table class="table"> 
-    <thead>
-        <tr>
-            {% for item in data.columns %}
-            <th>{{item}}</th>
-            {% endfor %}
-        </tr>
-    </thead>
-    <tbody>
-        {% for index,item in data.iterrows() %}
-        <tr>
-            {% for col in item %}
-            <td>{{col}}</td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+</div>
 
 {% endblock body %}
