--- a/template/plots.html
+++ b/template/plots.html
@@ -10,6 +10,20 @@
         <div class="chart mt-1" id="dist-type1">
 
         </div>
+      </div>  
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <h3>Euribor Distribution</h3>
+        <div class="chart mt-1" id="dist-type2">
+
+        </div>
+      </div>
+      <div class="col-sm">
+        <h3>Default Distribution</h3>
+        <div class="chart mt-1" id="dist-type3">
+
+        </div>
       </div>
     </div>
   </div>
@@ -17,8 +31,10 @@
   <script>
       var dist_type1 = {{data1 | safe}}
       var dist_type2 = {{data2 | safe}}
+      var dist_type3 = {{data3 | safe}}
       Plotly.plot('dist-type1', dist_type1,{})
       Plotly.plot('dist-type2', dist_type2,{})
+      Plotly.plot('dist-type3', dist_type3,{})
   </script>
 
 {% endblock body %}
