--- a/template/prediction.html
+++ b/template/prediction.html
@@ -87,15 +87,15 @@
                         <option value="success">success</option>
                     </select>
                     <!-- Employment Variation Rate -->
-                    <input type="number" name="emp.var.rate" placeholder="Employment Variation Rate" class="form-control form-control-sm mt-2">
+                    <input type="number" step="0.0001" name="emp.var.rate" placeholder="Employment Variation Rate" class="form-control form-control-sm mt-2">
                     <!-- Consumer Price Index -->
-                    <input type="number" name="cons.price.index" placeholder="Consumer Price Index" class="form-control form-control-sm mt-2">
+                    <input type="number" step="0.0001" name="cons.price.index" placeholder="Consumer Price Index" class="form-control form-control-sm mt-2">
                     <!-- Customer Confidence Index -->
-                    <input type="number" name="cons.conf.index" placeholder="Consumer Confidence Index" class="form-control form-control-sm mt-2">
+                    <input type="number" step="0.0001" name="cons.conf.index" placeholder="Consumer Confidence Index" class="form-control form-control-sm mt-2">
                     <!-- Euribor 3 month rate -->
-                    <input type="number" name="euribor3m" placeholder="Euribor 3 month rate" class="form-control form-control-sm mt-2">
+                    <input type="number" step="0.0001" name="euribor3m" placeholder="Euribor 3 month rate" class="form-control form-control-sm mt-2">
                     <!-- Number of Employees -->
-                    <input type="number" name="nr.employed" placeholder="Number of Employees" class="form-control form-control-sm mt-2">
+                    <input type="number" step="0.0001" name="nr.employed" placeholder="Number of Employees" class="form-control form-control-sm mt-2">
                     <div class="row justify-content-center">
                        <button type="submit" class="btn btn-primary mt-4">Predict</button> 
                     </div>
